samples/_failures_safe/1761435627_e81a61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c530c9b.c: In function ‘main’:
./samples/SAFE/__tmp_3c530c9b.c:172:16: error: missing terminating " character
  172 |         printf("\nCurrent
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_3c530c9b.c:172:9: error: expected expression at end of input
  172 |         printf("\nCurrent
      |         ^~~~~~
./samples/SAFE/__tmp_3c530c9b.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3c530c9b.c:172:9: error: expected declaration or statement at end of input
